public/style.css
/* START Master CSS file  */

body { 
    background-color: #666666;
    color: white;
}

.card {
    color: rgba(245, 245, 245, 0.90);
}

.cardText {
    color: white;
}

h4 {
    color: rgb(175, 175, 175);
}

nav:has(*) {
    color: white;
    background-color:#1155CC;
}

.nav-item a {
    color: white;
}

.dropdown-menu {
    --bs-dropdown-bg: #166cff;
    --bs-dropdown-link-active-color: #000;
    --bs-dropdown-link-active-bg: #fff;
}

.navbar {
    --bs-navbar-brand-color: rgba(255, 255, 255, 0.9);
    --bs-navbar-brand-hover-color: rgb(144 144 144);
    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.9%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
    --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.9);
    --bs-navbar-toggler-focus-width: .15rem;
}

.navbar-nav {
    --bs-nav-link-hover-color: rgb(144 144 144);
}

.btn-outline-light {
    --bs-btn-hover-color: rgb(144 144 144);
    --bs-btn-hover-bg: #1155CC;
    --bs-btn-hover-border-color: rgb(144 144 144);
    --bs-btn-active-color: rgb(144 144 144);
    --bs-btn-active-bg: #1155CC;
    --bs-btn-active-border-color: rgb(144 144 144);
}

.sidebar {
background-color:black; 
border:red solid 2px;
margin-left: 20px;
}

/* #titleAbout {
    display: flexbox; 
    text-align: center; 
    justify-content: center;
} */

.sidebar div {
    border: inherit
}

.failed-login-attempt {
    color: red;
}

.movie-poster {
    width: 130px;
}

.change-password {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    flex: 100px;
    padding: 10px 10px;
}

.change-password-container {
    max-width: 600px;
}

#welcome01 {
    font-family: 'Bungee Hairline', cursive;
    /* margin-top: 20px */
}

#welcome02 {
    font-family: 'Bungee Shade', cursive;
} 

#btnLogin {
    
}

#btnSignUp {
    
}

.titleLanding {
    display: flexbox; 
    text-align: center; 
}

#background1 {
    height: 100vh;
    background: url("./stock-photo-multi-ethnic-group-friends-watching.jpeg") no-repeat;
    background-size: cover;
    background-position: center;
    position:static;   
}

